tests/ui/generic-associated-types/gat-trait-path-parenthesised-args.stderr
error: lifetimes must be followed by `+` to form a trait object type
  --> $DIR/gat-trait-path-parenthesised-args.rs:6:29
   |
LL | fn foo<'a>(arg: Box<dyn X<Y('a) = &'a ()>>) {}
   |                             ^^
   |
help: consider adding a trait bound after the potential lifetime bound
   |
LL | fn foo<'a>(arg: Box<dyn X<Y('a + /* Trait */) = &'a ()>>) {}
   |                                +++++++++++++

error: parenthesized generic arguments cannot be used in associated type constraints
  --> $DIR/gat-trait-path-parenthesised-args.rs:6:27
   |
LL | fn foo<'a>(arg: Box<dyn X<Y('a) = &'a ()>>) {}
   |                           ^^^^^
   |
help: use angle brackets instead
   |
LL - fn foo<'a>(arg: Box<dyn X<Y('a) = &'a ()>>) {}
LL + fn foo<'a>(arg: Box<dyn X<Y<'a> = &'a ()>>) {}
   |

error: parenthesized generic arguments cannot be used in associated type constraints
  --> $DIR/gat-trait-path-parenthesised-args.rs:13:27
   |
LL | fn bar<'a>(arg: Box<dyn X<Y() = ()>>) {}
   |                           ^--
   |                            |
   |                            help: remove these parentheses

error[E0107]: associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/gat-trait-path-parenthesised-args.rs:6:27
   |
LL | fn foo<'a>(arg: Box<dyn X<Y('a) = &'a ()>>) {}
   |                           ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/gat-trait-path-parenthesised-args.rs:3:8
   |
LL |   type Y<'a>;
   |        ^ --
help: add missing lifetime argument
   |
LL | fn foo<'a>(arg: Box<dyn X<Y('_, 'a) = &'a ()>>) {}
   |                             +++

error[E0107]: associated type takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/gat-trait-path-parenthesised-args.rs:6:27
   |
LL | fn foo<'a>(arg: Box<dyn X<Y('a) = &'a ()>>) {}
   |                           ^---- help: remove the unnecessary generics
   |                           |
   |                           expected 0 generic arguments
   |
note: associated type defined here, with 0 generic parameters
  --> $DIR/gat-trait-path-parenthesised-args.rs:3:8
   |
LL |   type Y<'a>;
   |        ^

error[E0107]: associated type takes 1 lifetime argument but 0 lifetime arguments were supplied
  --> $DIR/gat-trait-path-parenthesised-args.rs:13:27
   |
LL | fn bar<'a>(arg: Box<dyn X<Y() = ()>>) {}
   |                           ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/gat-trait-path-parenthesised-args.rs:3:8
   |
LL |   type Y<'a>;
   |        ^ --
help: add missing lifetime argument
   |
LL | fn bar<'a>(arg: Box<dyn X<Y('_) = ()>>) {}
   |                             ++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0107`.
